Mon Feb  8 12:45:40 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* dev(0.5.4-045-REQ205-commit04)からのマージ

Mon Feb  8 00:09:53 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb: [REQ#205]assign_input_processor_nでnodeの検索に問
	  題があった

Sun Feb  7 22:53:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* conf.rb, fairy.conf:
	  CONF.CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR のデフォルトパラ
	  メータ値を調整した.

Sun Feb  7 20:23:40 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-group-by.rb: デバックログ追加
	* controller.rb: [REQ#205]対応で問題があった.

Sat Feb  6 01:19:27 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, n-group-by.rb, n-single-exportable.rb, njob.rb:
	  [REQ#206]対応その1
	* fiber-controller.rb: 追加


Fri Feb  5 21:18:26 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf: [REQ#205]対応忘れ.

Fri Feb  5 21:10:18 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, master.rb, processor.rb, conf.rb: [REQ#205]対応
	* controller.rb: Controller#terminateで例外の取りこぼしがあった.

Wed Feb  3 21:03:00 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: FastTempFile対応.
	  CONF.MOD_GROUP_BY_CMSB_THRESHOLDで閾値の計算がイマイチだった.
	  ModGroupByでデータが抜けていた([BUG#204]対応).
	* port.rb: GroupByでデッドロックする[BUG#202].
	  ChunkedFileBufferdQueue追加

Tue Jan 26 20:25:31 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* here.rb: [REQ#139}対応(try02)

Tue Jan 26 19:07:02 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Ruby1.9.1p378で動作確認

Tue Jan 26 17:42:57 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb, log.rb, : [BUG#134], [BUG#199]対応. バグがあった.
	* vfile.rb: [REQ#200]対応. 

Tue Jan 26 16:47:13 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf, processor.rb, conf.rb, log.rb: [BUG#134], [BUG#199]
	  対応. ローカル出力のログをCONF.LOCAL_OUTPUT_DEVで指定できるよう
	  にした.

Fri Jan 22 20:30:34 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, master.rb: [BUG#198]対応(try2)

Fri Jan 22 19:47:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
