@@ -81,6 +81,14 @@ module Fairy
     def start_subcommand(prog, *opts)
       opts.push *conf_to_arg
       Process.fork do
+	ObjectSpace.each_object(IO) do |io|
+	  begin
+	    if ![0, 1, 2].include?(io.fileno )
+	      io.close
+	    end
+	  rescue
+	  end
+	end
 	exec(prog, *opts)
       end
     end
